ipfw: add missing initializer for 'limit' table value

PR:		284691
MFC after:	1 week